refactor(persistentworkers): prefer Files.readString